--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "author": "htmlguy",
   "license": "Unlicense",
   "repo": "htmlguy/dedupe",
-  "devDependencies": {
-    "electron-prebuilt": "^0.30.3",
+  "dependencies": {
+    "electron-prebuilt": "^0.36.7",
     "walk": "^2.3.9"
   }
 }
